# -MODULO-REGULADOR-DE-CONSUMO-ENERGETICO

./: .gitignore  README.md  firebase-avc01.json
hmi/: CMakeLists.txt  DESARROLLO.ino  app_runtime.cpp  app_runtime.h  filelist.txt  touch.h  ui.c  ui.h  ui_ALERTAS.c  ui_ALERTAS.h  ui_CONFIGURACIONES.c  ui_CONFIGURACIONES.h  ui_HOME.c  ui_HOME.h  ui_MONITOREO_.c  ui_MONITOREO_.h  ui_WIFI.c  ui_WIFI.h  ui_app_logic.cpp  ui_app_logic.h  ui_comp_hook.c  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1354942385.c  ui_img_1515518950.c  ui_img_361177371.c  ui_img_534919753.c  ui_img_551389857.c  ui_img_561359873.c  ui_img_compartir_png.c  ui_img_configuraciones_png.c  ui_img_destello_png.c  ui_img_eliminar_png.c  ui_img_peligro_png.c  ui_img_spyware_png.c  ui_img_wifi_png.c  ui_input_overlay.cpp  ui_input_overlay.h  (+2 more)
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: pwa-register.tsx  voice-assistant.tsx  voice-floating-assistant.tsx
web/components/dashboard/: alertas-page.tsx  configuraciones-page.tsx  datos-externos-page.tsx  home-page.tsx  monitoreo-page.tsx  sidebar.tsx
web/hooks/: use-avc-data.ts  use-voice-recognition.ts
web/lib/: avc-alerts.ts  brand.ts  fab-storage.ts  firebase.ts  speech-synthesis.ts  voice-command-menu.ts  voice-commands.ts  voice-connectors.ts  voice-fuzzy-match.ts  wake-word.ts  weather.ts
web/public/: manifest.json  sw.js
web/scripts/: generate-ecopulse-assets.mjs
web/types/: speech-recognition.d.ts
