SET(SOURCES ui_HOME.c
    ui_MONITOREO_.c
    ui_CONFIGURACIONES.c
    ui_WIFI.c
    ui_ALERTAS.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_wifi_png.c
    ui_img_561359873.c
    ui_img_configuraciones_png.c
    ui_img_534919753.c
    ui_img_spyware_png.c
    ui_img_peligro_png.c
    ui_img_eliminar_png.c
    ui_img_361177371.c
    ui_img_1354942385.c
    ui_img_destello_png.c
    ui_img_551389857.c
    ui_img_1515518950.c
    ui_img_compartir_png.c)

add_library(ui ${SOURCES})
